--- a/com.lxz.Hystrix/pom.xml
+++ b/com.lxz.Hystrix/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>logback-access</artifactId>
 			<version>1.0.11</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
